--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,9 @@
             <directory>test</directory>
         </testsuite>
     </testsuites>
+    <listeners>
+        <listener class="Amp\PHPUnit\LoopReset" />
+    </listeners>
     <filter>
         <whitelist>
             <directory suffix=".php">src</directory>
